# dividi

./: .gitignore  Cargo.toml  Dockerfile  Justfile  docker-compose.yml  flake.nix  package.json
conf/: redis.conf
public/: styles.css
server/: Cargo.toml  Dockerfile  Dockerfile.backend
server/src/: main.rs  middleware.rs  state.rs  uploaded_file.rs
server/src/handler/: files.rs
src/: main.rs  state.rs  templates.rs  uploaded_file.rs
src/handler/: files.rs  home.rs
styles/: tailwind.css
templates/components/: error.html  file-form.html  file-list.html
templates/layouts/: base.html
templates/pages/: home.html
web/: .env  Dockerfile.frontend  default.conf  index.html  package-lock.json  package.json  vite.config.ts
web/src/: index.css  main.tsx  routeTree.gen.ts
web/src/components/: ErrorMessage.tsx  FileCard.tsx  FileForm.tsx  FileList.tsx
web/src/components/form/: SubmitButton.tsx  TextField.tsx  UploadField.tsx  form-context.tsx
web/src/routes/: __root.tsx  index.tsx
web/src/routes/auth/: waitlist.tsx
