[package]
name = "dividi"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = [ "Simon Blum" ]

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["multipart"] }
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
humansize = "2.1.3"
redis = "0.29.2"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "tokio", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
